fix soldering vid and some bugs
fixed soldering vids height issue where crop was messed up so top and bottom had black space. also fixed generator and index page bugs

--- a/css/generator_style.css
+++ b/css/generator_style.css
@@ -238,7 +238,7 @@ a:hover { /*doesnt do anything rn */
 
     .photo, .video { 
         flex: 1 1 100%;
-        height: 180px; 
+        min-height: 180px; 
     }  
 
     h1 { font-size: 1.8rem; }
