--- a/css/index_style.css
+++ b/css/index_style.css
@@ -204,6 +204,7 @@ a:hover { /*doesnt do anything rn */
         margin: 20px;
         gap: 20px;
         height: auto;
+        width: auto;
     }
 
     .photo, .background {
@@ -220,11 +221,12 @@ a:hover { /*doesnt do anything rn */
 
 /* Phones */
 @media (max-width: 480px) {
-    .row, .row_reverse {
+    .row, .row_reverse, .normal_row {
         flex-direction: column;
         gap: 15px;
         margin: 15px;
         height: auto;
+        width: auto;
     }
 
     .photo { 
